(feat) fix agentic prompts and selection through RAG (fix) tweaked some mcp calls to make sure we get the correct data